# aircraft-temp-monitoring-system

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: configuration.md  design.md  requirements.md  traceability.md  verification.md
src/: alert.cpp  alert.hpp  controller.cpp  controller.hpp  logger.cpp  logger.hpp  main.cpp  sensor.cpp  sensor.hpp
tests/: run_tests.sh  test_temp.cpp
